# territorytools

./: .gitignore  AlbaClient.sln  CHANGELOG.md  LICENSE  README.FireWall.md  README.clock.md  README.db.md  README.md  TerritoryTools.sln  azure-pipelines-1.yml  azure-pipelines.yml  backup-tt-db.sh  backup-tt-db.sql  docker-compose-other-services.yml  docker-compose.UrlShortener.yml  docker-compose.override.yml  docker-compose.staging.yml  docker-compose.tt-web-a.yml  docker-compose.tt-web-b.yml  docker-compose.tt-web-test.yml  docker-compose.yml  logs-tt-web-a.sh  logs-tt-web-b.sh  nginx-entrypoint.sh  nginx-example.tt.org.txt  nginx.template.conf  nuget.config  publish-test.sh  publish-tt-web-a.sh  publish-tt-web-b.sh  publish-tt-web-test.sh  publish-web-production.sh  publish-web-staging.sh  publish-web.sh  publish.sh  run-rust.sh  sample.env  stage-url-shortener.sh  stage.sh  tail-ufw.log.sh  (+3 more)
AddressParser/: AddressParseContainer.cs  AddressParsingException.cs  AddressPartType.cs  AddressSplitter.cs  IAddressParser.cs  MissingStreetTypeException.cs  ParsedAddress.cs  PrefixStreetTypeFinder.cs  StateFinder.cs  StreetType.cs  UnitNumberFinder.cs  UnitTypeFinder.cs
Alba/: .gitignore  AlbaClient.sln
Alba.IntegrationTests/: Alba.IntegrationTests.csproj  KmlGatewayIntegrationTests.cs
AlbaClientSetup/: Product.wxs
AlbaConsole/: AlbaConsole.csproj  Program.cs
AuthServer/: AuthServer.csproj  Program.cs  WeatherForecast.cs
ClickOnceDeploymentScripts/: ClickOnce-Module.psm1  Deploy.Example.ps1  README.md
Controllers/: Controllers.csproj  CookieWebClient.cs  IClientView.cs  IWebClient.cs  TextFileGateway.cs  packages.config
Controllers.Tests/: AllTerritories.json.txt  Controllers.Tests.csproj  TerritoryResultParserTests.cs  TestFileProvider.cs  WebClientFake.cs
Data/: Data.csproj  IVaultClient.cs  MainDbContext.cs
Entities/: Entities.csproj
Google/: DownloadGoogleSheet.ps1
IntegrationTestFramework/: Assert.cs  AssertFailedException.cs  IntegrationTestFramework.csproj  Test.cs  TestAttribute.cs  TestFixtureAttribute.cs
Scripts/: CopyDownload-Territory-Backup.ps1  DownloadGoogleSheets.ps1  README.md  backup-db-to-disk.sql  backup-territory-db-start.sh  backup-territory-db.service  backup-territory-db.sh  backup-territory-db.timer  copy-users.sql  example.env  old-BackupMsSqlRemotely.ps1  old-backup-mssql.sh
TerritoryShell/: AzureKeyVaultClient.cs  IVaultClient.cs  Program.cs  TerritoryShell.csproj  VaultClient.cs
TerritoryWeb/: Program.cs  Startup.cs  TerritoryWeb.csproj  appsettings.json
UrlShortener/: Dockerfile  Program.cs  Startup.cs  docker-compose.yml
Web/: README.md
Web/RustYewSpa/: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile1  Dockerfile2  README.md  TODO.md  deploy-wasm-slot.sh  deploy-wasm.sh  docker-compose.yml  example.nginx.config  ideas.md  index.html
Web/RustYewSpa/app/: leaflet-202309012214.js
Web/RustYewSpa/nginx/: default
Web/RustYewSpa/scss/: style.scss
Web/RustYewSpa/src/: components.rs  functions.rs  lib.rs  libs.rs  macros.rs  main.rs  modals.rs  models.rs
Web/RustYewSpa/src/components/: address_delivery_status_selector.rs  address_edit_page.rs  address_search_page.rs  address_shared_letter_functions.rs  address_shared_letter_page.rs  address_shared_letter_row.rs  address_status_selector.rs  app_menu.rs  assign_form.rs  assign_page.rs  assignment_form.rs  bb_button.rs  bb_text_input.rs  button_with_confirm.rs  canvas_map.rs  collapsible_section.rs  control.rs  email_section.rs  input_callback_macros.rs  language_selector.rs  language_selector_v2.rs  link_editor.rs  link_page.rs  map_component.rs  map_component_functions.rs  map_dashboard.rs  map_menu.rs  menu_bar.rs  menu_bar_v2.rs  model.rs  model_functions.rs  my_territories_page.rs  popup_content.rs  reports.rs  route_stuff.rs  selector_option_bilingual.rs  sms_section.rs  state_selector.rs  svg_map.rs  territory_edit_form.rs  (+16 more)
Web/RustYewSpa/src/components/reports/: sign_out_summary.rs  territory_sign_out_report_page.rs
Web/RustYewSpa/src/components/territory_editing/: assigner.rs  stage_selector.rs  territory_editor.rs
Web/RustYewSpa/src/functions/: document_functions.rs
Web/RustYewSpa/src/libs/: leaflet.rs  mapkit.rs
Web/RustYewSpa/src/macros/: http.rs  input_callback_macros.rs  save_callback.rs
Web/RustYewSpa/src/modals/: unauthorized.rs
Web/RustYewSpa/src/models/: addresses.rs  areas.rs  geocoding_coordinates.rs  territories.rs  territory_links.rs  territory_reports.rs  users.rs
WebUI/: Dockerfile  Program.cs  Startup.cs  WebUI.csproj  WebUI.sln  WebUIOptions.cs  appsettings.Development.json  appsettings.json  sample.env
WebUI.SeleniumTests/: IndexTests.cs  WebUI.SeleniumTests.csproj
WinFormsUI/: TestingUI.Designer.cs  TestingUI.cs  TestingUI.resx
WpfUI/: App.config  App.xaml.cs  CredentialGateway.cs  Version.txt  WpfUI.csproj
(+973 files in other folders)
