[package]
name = "leaflet-rs-example-yew-component"
version = "0.1.0"
authors = ["The leaflet-rs Developers"]
license = "MIT/Apache-2.0"
description = "An example using leaflet-rs in yew.rs component"
homepage = "https://github.com/slowtec/leaflet-rs"
repository = "https://github.com/slowtec/leaflet-rs"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
yew = "0.20"
yew-hooks = "0.2.0"
yew-router = "0.17"
yew-bootstrap = "0.5.4"
#leaflet = "0.2"
#leaflet = { git = "https://github.com/slowtec/leaflet-rs.git" }
#leaflet = { path = "libs" }
futures = "0.3"
gloo = "0.10.0"
gloo-console = "0.3.0"
gloo-utils = "0.2.0"
gloo-timers = "0.3.0"
gloo-events = "0.2.0"
gloo-net = "0.4.0"
indoc = "2.0.3"
reqwasm = "0.5.0"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
urlencoding = "2.1.2"
stylist = { version = "0.12.1", features = ["yew"] }
substring = "1.4.5"
chrono = "0.4.23"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlImageElement",
    "HtmlInputElement", 
    "HtmlSelectElement", 
    "HtmlAnchorElement", 
    "HtmlElement", 
    "HtmlStyleElement", 
    "CssStyleDeclaration", 
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "console", 
    "Window", 
    "Document", 
    "MouseEvent",
    "DomRect",
]

#[lib]
#crate-type=["cdylib", "rlib"]