[package]
name = "territory-tools-component"
version = "0.1.0"
authors = ["The Territory Tools Developers"]
license = "MIT/Apache-2.0"
description = "Territory Tools"
homepage = "https://github.com/territorytools/territorytools"
repository = "https://github.com/territorytools/territorytools"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
yew = "0.21"
yew-hooks = "0.3.0"
yew-router = "0.18"
yew-bootstrap = "0.6.1"
#leaflet = "0.2"
#leaflet = { git = "https://github.com/slowtec/leaflet-rs.git" }
#leaflet = { path = "libs" }
futures = "0.3"
gloo = "0.10.0"
gloo-console = "0.3.0"
gloo-utils = "0.2.0"
gloo-timers = "0.3.0"
gloo-events = "0.2.0"
gloo-net = "0.4.0"
indoc = "2.0.3"
reqwasm = "0.5.0"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde-wasm-bindgen = "0.6.0"
jsonpath = "0.1.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
urlencoding = "2.1.2"
stylist = { version = "0.13.0", features = ["yew"] }
substring = "1.4.5"
chrono = "0.4.23"
date_time_parser = "0.2.0"
js-sys = "0.3"
regex = "1.9.4"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlSelectElement", 
    "HtmlAnchorElement", 
    "HtmlElement", 
    "HtmlStyleElement", 
    "HtmlCanvasElement",
    "CssStyleDeclaration", 
    "CanvasRenderingContext2d",
    "SvgPathElement",
    "console", 
    "Window", 
    "Document", 
    "MouseEvent",
    "DomRect",
]

#[lib]
#crate-type=["cdylib", "rlib"]